Scrollbar colors fixed for new theme, header trans updated

--- a/src/server/public/css/main.css
+++ b/src/server/public/css/main.css
@@ -542,13 +542,13 @@ h1 {
 
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background-color: rgba(190, 190, 190, 0.2);
+    background-color: rgba(255, 255, 255, 0.4);
     transition: background-color 0.38s cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 ::-webkit-scrollbar-thumb:hover {
 
-    background-color: rgba(90, 90, 90, 0.3);
+    background-color: rgba(255, 255, 255, 0.6);
 }
 
 
